# gsl-extra

./: .gitignore  CMakeLists.txt  README.md
include/gsl/: gsl_extra.h  gsl_matrix_long_double_extra.h  gsl_tensor3.h  gsl_tensor3_long_double.h
src/: gsl_matrix_long_double_extra.c  gsl_tensor3.c  gsl_tensor3_long_double.c
